Arrumando o projeto